// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdvertPage > should cancel advert deletion when button clicked but modal cancel 1`] = `
<div>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Advert Details
    </h2>
    <div
      class="flex flex-col gap-4 md:flex-row"
    >
      <div
        class="md:flex-1"
      >
        <div
          class="mb-4 h-[370px] overflow-hidden rounded-lg bg-[#384152]"
        >
          <img
            alt="Product Image"
            class="h-full w-full object-cover"
            src="/src/assets/placeholder.webp"
          />
        </div>
        <div
          class="flex items-center justify-end"
        >
          <button
            class="btn btn-destructive"
          >
            <span
              class="-mb-0.75"
            >
              Delete this advert
            </span>
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border border-neutral-500/15 p-4 md:flex-1"
      >
        <h3>
          test
        </h3>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Price:
          </span>
          <span
            class="font-bold text-teal-600"
          >
            $
            0.00
          </span>
        </div>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Wants to:
          </span>
          <span
            class=""
          >
            Buy
          </span>
        </div>
        <div
          class="divide-b mb-2 flex flex-wrap gap-x-2 gap-y-0.5 pb-2"
        >
          <span
            class="font-bold"
          >
            Tags:
          </span>
          <span>
            #
            work
          </span>
          <span>
            #
            lifestyle
          </span>
        </div>
        <div>
          <time
            datetime="2025-08-10T10:25:58.000Z"
          >
            <p
              class="text-primary/50"
            >
              This advert was uploaded
               
              7 days
               ago.
            </p>
          </time>
        </div>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    />
  </div>
</div>
`;

exports[`AdvertPage > should dispatch advert deletion when button and modal clicked 1`] = `
<div>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Advert Details
    </h2>
    <div
      class="flex flex-col gap-4 md:flex-row"
    >
      <div
        class="md:flex-1"
      >
        <div
          class="mb-4 h-[370px] overflow-hidden rounded-lg bg-[#384152]"
        >
          <img
            alt="Product Image"
            class="h-full w-full object-cover"
            src="/src/assets/placeholder.webp"
          />
        </div>
        <div
          class="flex items-center justify-end"
        >
          <button
            class="btn btn-destructive"
          >
            <span
              class="-mb-0.75"
            >
              Delete this advert
            </span>
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border border-neutral-500/15 p-4 md:flex-1"
      >
        <h3>
          test
        </h3>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Price:
          </span>
          <span
            class="font-bold text-teal-600"
          >
            $
            0.00
          </span>
        </div>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Wants to:
          </span>
          <span
            class=""
          >
            Buy
          </span>
        </div>
        <div
          class="divide-b mb-2 flex flex-wrap gap-x-2 gap-y-0.5 pb-2"
        >
          <span
            class="font-bold"
          >
            Tags:
          </span>
          <span>
            #
            work
          </span>
          <span>
            #
            lifestyle
          </span>
        </div>
        <div>
          <time
            datetime="2025-08-10T10:25:58.000Z"
          >
            <p
              class="text-primary/50"
            >
              This advert was uploaded
               
              7 days
               ago.
            </p>
          </time>
        </div>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    />
  </div>
</div>
`;

exports[`AdvertPage > should dispatch advert details 1`] = `
<div>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Advert Details
    </h2>
    <div
      class="flex flex-col gap-4 md:flex-row"
    >
      <div
        class="md:flex-1"
      >
        <div
          class="mb-4 h-[370px] overflow-hidden rounded-lg bg-[#384152]"
        >
          <img
            alt="Product Image"
            class="h-full w-full object-cover"
            src="/src/assets/placeholder.webp"
          />
        </div>
        <div
          class="flex items-center justify-end"
        >
          <button
            class="btn btn-destructive"
          >
            <span
              class="-mb-0.75"
            >
              Delete this advert
            </span>
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border border-neutral-500/15 p-4 md:flex-1"
      >
        <h3>
          test
        </h3>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Price:
          </span>
          <span
            class="font-bold text-teal-600"
          >
            $
            0.00
          </span>
        </div>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Wants to:
          </span>
          <span
            class=""
          >
            Buy
          </span>
        </div>
        <div
          class="divide-b mb-2 flex flex-wrap gap-x-2 gap-y-0.5 pb-2"
        >
          <span
            class="font-bold"
          >
            Tags:
          </span>
          <span>
            #
            work
          </span>
          <span>
            #
            lifestyle
          </span>
        </div>
        <div>
          <time
            datetime="2025-08-10T10:25:58.000Z"
          >
            <p
              class="text-primary/50"
            >
              This advert was uploaded
               
              7 days
               ago.
            </p>
          </time>
        </div>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    />
  </div>
</div>
`;

exports[`AdvertPage > should dispatch alert component with error message 1`] = `
<div>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Advert Details
    </h2>
    <div
      class="flex flex-col gap-4 md:flex-row"
    >
      <div
        class="md:flex-1"
      >
        <div
          class="mb-4 h-[370px] overflow-hidden rounded-lg bg-[#384152]"
        >
          <img
            alt="Product Image"
            class="h-full w-full object-cover"
            src="/src/assets/placeholder.webp"
          />
        </div>
        <div
          class="flex items-center justify-end"
        >
          <button
            class="btn btn-destructive"
          >
            <span
              class="-mb-0.75"
            >
              Delete this advert
            </span>
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border border-neutral-500/15 p-4 md:flex-1"
      >
        <h3>
          test
        </h3>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Price:
          </span>
          <span
            class="font-bold text-teal-600"
          >
            $
            0.00
          </span>
        </div>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Wants to:
          </span>
          <span
            class=""
          >
            Buy
          </span>
        </div>
        <div
          class="divide-b mb-2 flex flex-wrap gap-x-2 gap-y-0.5 pb-2"
        >
          <span
            class="font-bold"
          >
            Tags:
          </span>
          <span>
            #
            work
          </span>
          <span>
            #
            lifestyle
          </span>
        </div>
        <div>
          <time
            datetime="2025-08-10T10:25:58.000Z"
          >
            <p
              class="text-primary/50"
            >
              This advert was uploaded
               
              7 days
               ago.
            </p>
          </time>
        </div>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    >
      <div
        class="alert alert-error"
        role="alert"
      >
        <div
          class="flex items-center justify-between gap-1"
        >
          <div
            class="flex items-center justify-center"
          />
          <span
            class="-mb-1"
          >
            Error message
          </span>
        </div>
        <button
          aria-label="Close"
          class="flex cursor-pointer items-center justify-center rounded-lg"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <span
            class="material-symbols-outlined !text-xl !font-medium"
          >
            close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AdvertPage > should dispatch loader when pending 1`] = `
<div>
  <div
    class="wrapper only:mt-8"
  >
    <h2>
      Advert Details
    </h2>
    <div
      class="fixed top-0 left-0 z-999 block h-full w-full bg-white"
    >
      <div
        class="absolute top-2/4 left-1/2 -translate-x-1/2 -translate-y-1/2"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="inline h-18 w-18 animate-spin"
          fill="none"
          viewBox="0 0 100 101"
          xmlns="http://www.w3.org/2000/svg"
        >
          <lineargradient
            id="gradient"
            x2="1"
            y2="1"
          >
            <stop
              offset="0%"
              stop-color="#49c8ff"
            />
            <stop
              offset="100%"
              stop-color="#bd34fe"
            />
          </lineargradient>
          <path
            d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
            fill="url(#gradient)"
          />
          <path
            d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
            fill="currentFill"
          />
        </svg>
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
    <div
      class="flex flex-col gap-4 md:flex-row"
    >
      <div
        class="md:flex-1"
      >
        <div
          class="mb-4 h-[370px] overflow-hidden rounded-lg bg-[#384152]"
        >
          <img
            alt="Product Image"
            class="h-full w-full object-cover"
            src="/src/assets/placeholder.webp"
          />
        </div>
        <div
          class="flex items-center justify-end"
        >
          <button
            class="btn btn-destructive"
          >
            <span
              class="-mb-0.75"
            >
              Delete this advert
            </span>
          </button>
        </div>
      </div>
      <div
        class="rounded-lg border border-neutral-500/15 p-4 md:flex-1"
      >
        <h3>
          test
        </h3>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Price:
          </span>
          <span
            class="font-bold text-teal-600"
          >
            $
            0.00
          </span>
        </div>
        <div
          class="divide-b mb-2 flex gap-2 pb-2"
        >
          <span
            class="font-bold"
          >
            Wants to:
          </span>
          <span
            class=""
          >
            Buy
          </span>
        </div>
        <div
          class="divide-b mb-2 flex flex-wrap gap-x-2 gap-y-0.5 pb-2"
        >
          <span
            class="font-bold"
          >
            Tags:
          </span>
          <span>
            #
            work
          </span>
          <span>
            #
            lifestyle
          </span>
        </div>
        <div>
          <time
            datetime="2025-08-10T10:25:58.000Z"
          >
            <p
              class="text-primary/50"
            >
              This advert was uploaded
               
              7 days
               ago.
            </p>
          </time>
        </div>
      </div>
    </div>
    <div
      class="fixed top-11.5 left-1/2 z-50 -translate-x-1/2"
    />
  </div>
</div>
`;
